--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Canton Resistance</title>
 	<meta name="author" content="Zhaofeng Li"/>
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
-	<meta name="theme-color" content="#00c2ff"/>
+	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style/core.css"/>
 	<script src="vendor/jquery/dist/jquery.min.js"></script>
 	<!--[if lt IE 9]>
@@ -18,7 +18,7 @@
 		<div class="sectionContent">
 			<h1>Canton Resistance</h1>
 			<img id="logo" src="images/logo.png"/>
-			<span id="tagline">The world around you is not what it seems.</span>
+			<span id="tagline">我们的自由岌岌可危</span>
 			<div class="scroll-button scroll-to-aboutme down-arrow">&#x25BC</div>
 		</div>
 	</section>
