--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		<div id="content">
 			<h1>Canton Resistance</h1>
 			<img id="logo" src="images/logo.png"/><br/>
-			<a class="ingress-button" href="#">Join us</a>
+			<a class="ingress-button" href="http://goo.gl/forms/u2RYhHDI3l">Join us</a>
 		</div>
 	</div>
 	<script src="vendor/skrollr/dist/skrollr.min.js"></script>
