--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
 	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style/core.css"/>
-	<script src="vendor/jquery/dist/jquery.min.js"></script>
 	<!--[if lt IE 9]>
 		<link rel="stylesheet" href="vendor/github-fork-ribbon-css/gh-fork-ribbon.ie.css"/>
 		<script src="vendor/html5shiv/dist/html5shiv.min.js"></script>
@@ -23,7 +22,8 @@
 		<div id="content">
 			<h1>Canton Resistance</h1>
 			<img id="logo" src="images/logo.png"/><br/>
-			<a class="ingress-button" href="http://goo.gl/forms/u2RYhHDI3l">Join us</a>
+			<h2>我们的自由岌岌可危</h2>
+			<a id="join-us" class="ingress-button" href="https://drive.google.com/file/d/0ByE9KAvk-JM-WTJocnlUUWhIcVU/view?usp=sharing">加入我们</a>
 		</div>
 	</div>
 	<script src="vendor/skrollr/dist/skrollr.min.js"></script>
