--- a/index.html
+++ b/index.html
@@ -2,28 +2,22 @@
 <html>
 <head>
 	<title>Canton Resistance</title>
-	<meta name="author" content="Zhaofeng Li"/>
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
-	<meta name="theme-color" content="#000000"/>
-	<link rel="stylesheet" href="style/core.css"/>
-	<!--[if lt IE 9]>
-		<link rel="stylesheet" href="vendor/github-fork-ribbon-css/gh-fork-ribbon.ie.css"/>
-		<script src="vendor/html5shiv/dist/html5shiv.min.js"></script>
-		<script src="vendor/respond/dest/respond.min.js"></script>
-	<![endif]-->
+	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
 	<div class="separator">
-		<div class="separator_left_arm"></div>
-		<div class="separator_center"></div>
-		<div class="separator_right_arm"></div>
+		<div class="left"></div>
+		<div class="center"></div>
+		<div class="right"></div>
 	</div>
-	<div id="contentBorder">
-		<div id="content">
-			<h1>Canton Resistance</h1>
-			<img id="logo" src="images/logo.png"/><br/>
-			<h2>我们的自由岌岌可危</h2>
-			<a id="join-us" class="ingress-button" href="https://drive.google.com/file/d/0ByE9KAvk-JM-WTJocnlUUWhIcVU/view?usp=sharing">加入我们</a>
+	<div class="wrapper">
+		<div class="container">
+			<div class="content">
+				<img src="logo.png" alt="Canton Resistance" class="logo">
+				<h1 class="slogan">我们的自由岌岌可危</h1>
+				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-WTJocnlUUWhIcVU/view?usp=sharing" class="ingress-button">加入我们</a>
+			</div>
 		</div>
 	</div>
 </body>
