--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Canton Resistance</title>
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
+	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style.css"/>
 </head>
 <body>
