--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 	<title>Canton Resistance</title>
+	<meta charset="UTF-8">
+	<meta name="description" content="portal for canton resistance">
+	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
 	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style.css"/>
