[WIP] Add tutorial

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			<div class="content">
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
-				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-WTJocnlUUWhIcVU/view?usp=sharing" class="ingress-button">加入我们</a>
+				<a href="tutorial/" class="ingress-button">加入我们</a>
 			</div>
 		</div>
 	</div>
