--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Canton Resistance</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="portal for canton resistance">
-	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance">
+	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance, 蓝军, 反抗军">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
 	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style.css"/>
@@ -20,7 +20,7 @@
 			<div class="content">
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
-				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-WTJocnlUUWhIcVU/view?usp=sharing" class="ingress-button">加入我们</a>
+				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-Mm1TM2FyNUduNEU/view?usp=sharing" class="ingress-button">加入我们</a>
 				<a href="https://plus.google.com/events/cl1tvcj25drgshi0jf65a6sunqc" class="ingress-button">参加训练营</a>
 			</div>
 		</div>
