--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>Canton Resistance</title>
 	<meta charset="UTF-8">
-	<meta name="description" content="portal for canton resistance">
+	<meta name="description" content="欢迎加入广州反抗军，我们的自由岌岌可危。">
 	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance, 蓝军, 反抗军">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
 	<meta name="theme-color" content="#000000"/>
