--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Canton Resistance</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="欢迎加入广州反抗军，我们的自由岌岌可危。">
-	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance, 蓝军, 反抗军">
+	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance, 蓝军, 反抗军, pokemon go">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
 	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style.css"/>
