Update Bootcamp to Anomaly article

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
 				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-STFkRGNkX3BlTW8/view?usp=sharing" class="ingress-button">加入我们</a>
-				<a href="https://plus.google.com/u/0/events/cu71nfun5be6jhjam72tf786mpc" class="ingress-button">参加训练营</a>
+				<a href="http://mp.weixin.qq.com/s?__biz=MzIyMjExMDQ5NQ==&mid=401675134&idx=1&sn=0cf16f57ee801c659201cb24dbee563b&scene=0#wechat_redirect" class="ingress-button">参加训练营</a>
 			</div>
 		</div>
 	</div>
