--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
 				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-STFkRGNkX3BlTW8/view?usp=sharing" class="ingress-button">加入我们</a>
-				<a href="http://mp.weixin.qq.com/s?__biz=MzIyMjExMDQ5NQ==&mid=401669340&idx=1&sn=3e8b835ef655078635e75bb13a4831dd&scene=0&previewkey=GmsYCbbcGQO8vamxkmPY2Mc2LCzidIVXFV95LKkbHHY%3D#wechat_redirect" class="ingress-button">参加训练营</a>
+				<a href="https://plus.google.com/events/co9qqeh8ckbjut61hmtm671d4ls" class="ingress-button">参加训练营</a>
 			</div>
 		</div>
 	</div>
