Lesson button added

--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
 				<a href="https://drive.google.com/file/d/0ByE9KAvk-JM-STFkRGNkX3BlTW8/view?usp=sharing" class="ingress-button">加入我们</a>
+				<a href="http://lesson.cantonres.com" class="ingress-button">完整教程</a>
 				<a href="https://plus.google.com/events/cimu9imlibbtav722ddps8kt714" class="ingress-button">参加训练营</a>
 			</div>
 		</div>
