--- a/index2.html
+++ b/index2.html
@@ -16,7 +16,7 @@
 		<div class="right"></div>
 	</div>
 	<div class="wrapper">
-<div class="container">
+		<div class="container">
 			<div class="content">
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">世界非如你所见。</h1>
@@ -24,8 +24,7 @@
 				<a href="http://lesson.cantonres.com" class="ingress-button">完整教程</a>
 				<a href="https://plus.google.com/events/ctlqv20qcnbkhqa36hrap9an3o8" class="ingress-button">参加训练营</a> -->
 			</div>
-		<div class="footer">粤 ICP 备 16055999 号</div></div>
-			</div>
+			<div class="footer"><a href="www.miitbeian.gov.cn">粤 ICP 备 16055999 号</a></div>
 		</div>
 	</div>
 </body>
