--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				<a href="http://lesson.cantonres.com" class="ingress-button">完整教程</a>
 				<a href="https://plus.google.com/events/ctlqv20qcnbkhqa36hrap9an3o8" class="ingress-button">参加训练营</a> -->
 			</div>
-			<div class="footer"><a href="www.miitbeian.gov.cn">粤 ICP 备 16055999 号</a></div>
+			<div class="footer"><a href="http://www.miitbeian.gov.cn">粤 ICP 备 16055999 号</a></div>
 		</div>
 	</div>
 </body>
