Remove bootcamp button

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<h1 class="slogan">我们的自由岌岌可危</h1>
 				<a href="http://join.CantonRES.com" class="ingress-button">加入我们</a>
 				<a href="http://lesson.cantonres.com" class="ingress-button">完整教程</a>
-				<a href="https://plus.google.com/events/ctlqv20qcnbkhqa36hrap9an3o8" class="ingress-button">参加训练营</a>
+				<!-- <a href="https://plus.google.com/events/ctlqv20qcnbkhqa36hrap9an3o8" class="ingress-button">参加训练营</a> -->
 			</div>
 			<div id="recordlink" class="footer"><a href="http://www.miitbeian.gov.cn" target="_blank">粤 ICP 备 16055999 号</a></div>
 		</div>
