--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<title>Canton Resistance</title>
 	<meta charset="UTF-8">
 	<meta name="description" content="欢迎加入泛广州反抗军，我们的自由岌岌可危。">
-	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance, 蓝军, 反抗军, pokemon go">
+	<meta name="keywords" content="ingress, canton, guangzhou, 广州, resistance, 蓝军, 反抗军, 抵抗军, pokemon go">
 	<meta name="viewport" content="width=device-width,minimum-scale=1,maximum-scale=1" />
 	<meta name="theme-color" content="#000000"/>
 	<link rel="stylesheet" href="style.css"/>
@@ -24,7 +24,6 @@
 				<a href="http://lesson.cantonres.com" class="ingress-button">完整教程</a>
 				<!-- <a href="https://plus.google.com/events/ctlqv20qcnbkhqa36hrap9an3o8" class="ingress-button">参加训练营</a> -->
 			</div>
-			<div id="recordlink" class="footer"><a href="http://www.miitbeian.gov.cn" target="_blank">粤 ICP 备 16055999 号</a></div>
 		</div>
 	</div>
 </body>
