--- a/index.html
+++ b/index.html
@@ -21,8 +21,7 @@
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
 				<a href="http://join.CantonRES.com" class="ingress-button">加入我们</a>
-				<a href="http://lesson.cantonres.com" class="ingress-button">完整教程</a>
-				<!-- <a href="https://plus.google.com/events/ctlqv20qcnbkhqa36hrap9an3o8" class="ingress-button">参加训练营</a> -->
+				<a href="http://lesson.CantonRES.com" class="ingress-button">完整教程</a>
 			</div>
 		</div>
 	</div>
