Turn Prime tutorial online.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 			<div class="content">
 				<img src="logo.png" alt="Canton Resistance" class="logo">
 				<h1 class="slogan">我们的自由岌岌可危</h1>
-				<a href="http://join.CantonRES.com" class="ingress-button">加入我们</a>
-				<a href="http://lesson.CantonRES.com" class="ingress-button">完整教程</a>
+				<a href="https://join.CantonRES.com" class="ingress-button">加入我们</a>
+				<a href="https://prime-lesson.CantonRES.com" class="ingress-button">教程 [Prime]</a>
+				<a href="https://lesson.CantonRES.com" class="ingress-button">教程 [REDACTED]</a>
 			</div>
 		</div>
 	</div>
